--- a/static/assets/scss/sections/activities.scss
+++ b/static/assets/scss/sections/activities.scss
@@ -1,4 +1,5 @@
 .hexagon {
+  color: #000;
   height: 55px;
   margin: 2.25rem;
   position: relative;
@@ -51,7 +52,6 @@
 .light-orange-hexagon::before,
 .light-orange-hexagon::after {
   background-color: $orange;
-  color: white;
 }
 
 .dark-orange-hexagon,
@@ -59,7 +59,6 @@
 .dark-orange-hexagon::before,
 .dark-orange-hexagon::after {
   background-color: $dark-orange;
-  color: white;
 }
 
 .blue-hexagon,
@@ -67,7 +66,6 @@
 .blue-hexagon::before,
 .blue-hexagon::after {
   background-color: $light-blue;
-  color: white;
 }
 
 .activities {
