--- a/static/assets/scss/sections/workshops.scss
+++ b/static/assets/scss/sections/workshops.scss
@@ -2,7 +2,7 @@
 .workshop-links {
   background-color: $orange;
   border-radius: 99px;
-  color: #fff;
+  color: #000;
   padding: 0.65rem 0.75rem;
 }
 
@@ -15,7 +15,7 @@
   }
 }
 
-// General styles for Workshops partial and Workshops List Page.
+// Styles for Workshops partial 
 .workshops {
   .container {
     align-items: center;
@@ -79,6 +79,12 @@
       display: flex;
       flex-direction: column;
       min-width: 50%;
+    }
+
+    @media (max-width: 768px) {
+      & {
+        flex-direction: column;
+      }
     }
   }
 }
